src/unit_tests/Semantics/success/assignment.cl
class Test {
  foo:Int;
  bar():Object{foo <- 3 };
};

class Main {
	main() : Object {
		1
	};
};