src/unit_tests/Semantics/fail/comparisons-assoc.cl
class Test {
  foo:Test;
  bar():Int { {x = (3 < 4) ;}};
};

class Main {
	main() : Int {
		1
	};
};